[gd_scene load_steps=2 format=2]

[ext_resource path="res://Menu/Menu.gd" type="Script" id=1]

[node name="Menu" type="Node2D"]
script = ExtResource( 1 )

[node name="HostButton" type="Button" parent="."]
margin_left = 320.0
margin_top = 160.0
margin_right = 704.0
margin_bottom = 256.0
text = "HOST"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClientButton" type="Button" parent="."]
margin_left = 320.0
margin_top = 288.0
margin_right = 704.0
margin_bottom = 384.0
text = "JOIN"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IP" type="LineEdit" parent="ClientButton"]
margin_top = 128.0
margin_right = 384.0
margin_bottom = 152.0
text = "127.0.0.1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ClientButton/IP"]
margin_left = -64.0
margin_right = -32.0
margin_bottom = 14.0
text = "IP:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="LineEdit" parent="ClientButton"]
margin_top = 160.0
margin_right = 384.0
margin_bottom = 184.0
text = "Name"

[node name="Label" type="Label" parent="ClientButton/Name"]
margin_left = -64.0
margin_right = -22.0
margin_bottom = 14.0
text = "NAME:"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="HostButton" to="." method="_on_HostButton_pressed"]
[connection signal="pressed" from="ClientButton" to="." method="_on_ClientButton_pressed"]
